fix spacing for buttons inside of container cards. add logic for displaying time stopped for in stopped containers

--- a/src/components/ContainersCard/ContainersCard.module.scss
+++ b/src/components/ContainersCard/ContainersCard.module.scss
@@ -16,9 +16,12 @@
 .buttonHolder {
   display: flex;
   justify-content: space-between;
+}
+.buttonSpacer {
+  position: absolute;
+  bottom: 0.5rem;
+  left: 0.5rem;
   button {
-    position: absolute;
-    bottom: 0.5rem;
-    left: 0.5rem;
+    margin-right: 1rem;
   }
 }
